@@ -165,6 +165,8 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [StatS] AverageCallCost and TotalCallCost now returns error for negative Cost field
   * [SessionS] The sessions are no longer terminated on shutdown if the replication_conns are set
   * [FilterS] Added *regex filter
+  * [RSRParsers] Added *len dataconverter  
+
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
 cgrates (0.10.0) UNRELEASED; urgency=medium
